MyProject/force-app/main/default/objects/Book__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <label>Book Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>