MyProject/force-app/main/default/objects/Book__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST %</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>