MyProject/force-app/main/default/objects/Book__c/fields/Hardcover__c.field-meta.xml
<CustomField>
    <fullName>Hardcover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardcover?</label>
    <type>Checkbox</type>
</CustomField>