MyProject/force-app/main/default/objects/Book__c/fields/ISBN_Number__c.field-meta.xml
<CustomField>
    <fullName>ISBN_Number__c</fullName>
    <label>ISBN Number</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>