MyProject/force-app/main/default/objects/Book__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <formula>IF(Stock_Level__c &lt; 5, &quot;🔴 Reorder Now&quot;, 
IF(Stock_Level__c &lt; 20, &quot;🟡 Low Stock&quot;, &quot;🟢 Healthy&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Status</label>
    <type>Text</type>
</CustomField>