MyProject/force-app/main/default/objects/Book__c/fields/Sub_Genre__c.field-meta.xml
<CustomField>
    <fullName>Sub_Genre__c</fullName>
    <label>Sub-Genre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Genre__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Space Opera,</fullName>
            </value>
            <value>
                <fullName>Time Trave</fullName>
            </value>
            <value>
                <fullName>True Crime</fullName>
            </value>
            <value>
                <fullName>Sherlockian</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Self-Help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>