MyProject/force-app/main/default/objects/Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Discount__c</columns>
    <columns>GST__c</columns>
    <columns>Price__c</columns>
    <columns>Publication_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>